adjust quote img for mobile, and add margin to tours

--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
         Click and drag on the interactive 360 photo below to find the play
         button and watch a clip of the live planetarium experience.
       </p>
-      <div style="position: relative; padding-top: 56.25%">
+      <div
+        style="
+          position: relative;
+          padding-top: 56.25%;
+          margin-top: 10px;
+          margin-bottom: 10px;
+        "
+      >
         <div
           style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
         >
@@ -181,7 +188,14 @@
         adventure and behavior-driven algorithms that delivered intelligent
         calls-to-action based on each user’s personal interests.
       </p>
-      <div style="position: relative; padding-top: 56.25%">
+      <div
+        style="
+          position: relative;
+          padding-top: 56.25%;
+          margin-top: 10px;
+          margin-bottom: 10px;
+        "
+      >
         <div
           style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
         >
